# Advent-of-Code

./: Cargo.toml  clippy.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/cli/: aoc_cli.rs  day.rs  macros.rs  mod.rs  runner.rs
src/cli/commands/: download.rs  mod.rs  prepare.rs  solve.rs
src/helper/: bitmask.rs  dense_grid.rs  dsu.rs  graph.rs  grid.rs  i256.rs  intcode.rs  md5.rs  misc.rs  mod.rs  modulo.rs  parser.rs  permutations.rs  position.rs  position3d.rs  rand.rs  range.rs  rational.rs
src/helper/grid/: dense.rs  dense_grid.rs  grid_index.rs  index.rs  mod.rs  sparse.rs  sparse_grid.rs
src/helper/parser/: branch.rs  character.rs  combinator.rs  mod.rs  multi.rs  sequence.rs
