[package]
name = "all_aoc"
version = "0.1.0"
edition = "2024"
default-run = "all_aoc"

[features]
expensive = []

[lints.clippy]


pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
single_call_fn = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
unreachable = "allow"
unimplemented = "allow"
default_numeric_fallback = "allow"
arithmetic_side_effects = "allow"
redundant_test_prefix = "allow"
unwrap_used = "allow"
pattern_type_mismatch = "allow"
shadow_unrelated = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
integer_division_remainder_used = "allow"
integer_division = "allow"
as_conversions = "allow"
separated_literal_suffix = "allow"
else_if_without_else = "allow"
iter_over_hash_type = "allow"
single_char_lifetime_names = "allow"
expect_used = "allow"
question_mark_used = "allow"
missing_asserts_for_indexing = "allow"
unwrap_in_result = "allow"
ref_patterns = "allow"
exhaustive_enums = "allow"
modulo_arithmetic = "allow"
panic = "allow"
semicolon_outside_block = "allow"
missing_trait_methods = "allow"
float_arithmetic = "allow"
missing_inline_in_public_items = "allow"
exhaustive_structs = "allow"
mod_module_files = "allow"
little_endian_bytes = "allow"
let_underscore_must_use = "allow"
map_err_ignore = "allow"
print_stdout = "allow"
print_stderr = "allow"
let_underscore_untyped = "allow"
exit = "allow"
blanket_clippy_restriction_lints = "allow"
indexing_slicing = "allow"
string_add = "allow"
string_slice = "allow"
unnecessary_wraps = "allow"
std_instead_of_alloc = "allow"
missing_assert_message = "allow"
arbitrary_source_item_ordering = "allow"


wrong_self_convention = "warn"
trivially_copy_pass_by_ref = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
maybe_infinite_iter = "warn"
cast_lossless = "warn"
manual_assert = "warn"
unreadable_literal = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
inline_always = "warn"
flat_map_option = "warn"
explicit_iter_loop = "warn"
items_after_statements = "warn"
redundant_else = "warn"
needless_for_each = "warn"
needless_continue = "warn"
from_iter_instead_of_collect = "warn"
stable_sort_primitive = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
enum_glob_use = "warn"
many_single_char_names = "warn"
inefficient_to_string = "warn"
match_bool = "warn"
needless_raw_string_hashes = "warn"
match_wild_err_arm = "warn"
map_unwrap_or = "warn"
doc_markdown = "warn"
bool_to_int_with_if = "warn"
return_self_not_must_use = "warn"
ignored_unit_patterns = "warn"
format_push_string = "warn"
unnecessary_semicolon = "warn"
manual_midpoint = "warn"
missing_const_for_fn = "warn"
option_if_let_else = "warn"
needless_collect = "warn"
use_self = "warn"
iter_on_single_items = "warn"
redundant_clone = "warn"
or_fun_call = "warn"
debug_assert_with_mut_call = "warn"
collection_is_never_read = "warn"
unused_peekable = "warn"
decimal_literal_representation = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
panic_in_result_fn = "warn"
return_and_then = "warn"
unseparated_literal_suffix = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
wildcard_enum_match_arm = "warn"
pub_use = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
float_cmp = "warn"
while_float = "warn"
impl_trait_in_params = "warn"
module_name_repetitions = "warn"
std_instead_of_core = "warn"
same_name_method = "warn"
unused_trait_names = "warn"
use_debug = "warn"
absolute_paths = "warn"
