[package]
name = "all_aoc"
version = "0.1.0"
edition = "2024"
default-run = "all_aoc"

[profile.release]
debug = true

[features]
expensive = []

[lints.clippy]


pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
single_call_fn = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
unreachable = "allow"
unimplemented = "allow"
default_numeric_fallback = "allow"
arithmetic_side_effects = "allow"
redundant_test_prefix = "allow"
unwrap_used = "allow"
pattern_type_mismatch = "allow"
shadow_unrelated = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
integer_division_remainder_used = "allow"
integer_division = "allow"
as_conversions = "allow"
separated_literal_suffix = "allow"
else_if_without_else = "allow"
iter_over_hash_type = "allow"
single_char_lifetime_names = "allow"
expect_used = "allow"
question_mark_used = "allow"
missing_asserts_for_indexing = "allow"
unwrap_in_result = "allow"
ref_patterns = "allow"
exhaustive_enums = "allow"
modulo_arithmetic = "allow"
panic = "allow"
semicolon_outside_block = "allow"
missing_trait_methods = "allow"
float_arithmetic = "allow"
missing_inline_in_public_items = "allow"
exhaustive_structs = "allow"
mod_module_files = "allow"
little_endian_bytes = "allow"
let_underscore_must_use = "allow"
map_err_ignore = "allow"
print_stdout = "allow"
print_stderr = "allow"
let_underscore_untyped = "allow"
exit = "allow"
blanket_clippy_restriction_lints = "allow"
indexing_slicing = "allow"
string_add = "allow"
string_slice = "allow"
unnecessary_wraps = "allow"
std_instead_of_alloc = "allow"
missing_assert_message = "allow"
arbitrary_source_item_ordering = "allow"